prototype with static generation

--- a/index.qmd
+++ b/index.qmd
@@ -25,32 +25,50 @@ listing:
 
 ![](assets/img/cs-pui-listing.jpg)
 
+Despite their research-intensive PhDs, many graduates [find academic happiness with **primarily-undergraduate institutions**](https://medium.com/bucknell-hci/the-jobs-i-didnt-see-my-misconceptions-of-the-academic-job-market-9cb98b057422) because of the compelling balance they offer between teaching and research. But the pathways to these positions is often not clear (_how do I find these jobs?_), and often requires insider knowledge of a landscape that is invisible to PhD students. This listing is meant to help navigate that muddy water. [See archived listings from previous years](faq#archive).
 
-# Introduction      
-      
-St. agur blue cheese edam mascarpone. Port-salut stinking bishop when the cheese comes out everybody's happy cut the cheese cheddar paneer cheddar feta. Queso blue castello queso gouda smelly cheese chalk and cheese cottage cheese cheese on toast. Cheese slices pepper jack cheese on toast cheese and biscuits.
+This document does _not_ contain most CS faculty positions. It's specifically intended for people who want to invest in teaching/mentorship with undergraduate students while still staying active in their scholarship. See our [**Resources**](resources) page for insight into the ways in which PUIs might differ in their interviewing processes and values. 
+
+
+::: {.notice .notice-blue}
+
+📣 **If you would like to add your position,** [please visit the **Post an Ad** page](/posting) for logistical details or the [**FAQ**](/faq) for more info about this site (it's free!). 
+
+:::
+  
+
+::: {.notice .notice-gray .criteria}
+
+##### Criteria For Job Postings {#sec-criteria}
+
+The positions on this page should be...
+
+- accessible to those with a Ph.D. in CS (or a closely related field)
+- permanent positions (mostly likely tenure-track) [_why?_](faq#scope)
+- universities that identify as **primarily-undergraduate institutions** [_why?_](faq#scope)
+- institutions that highly value teaching, but also _secure time and financial resources for faculty to remain engaged with research_. [_what does this mean?_](faq#research)
+
  
-Mascarpone blue castello cheeseburger. St. agur blue cheese st. agur blue cheese cheeseburger bavarian bergkase cheesy feet squirty cheese who moved my cheese jarlsberg. Cheese and biscuits danish fontina pepper jack blue castello camembert de normandie emmental airedale airedale. Who moved my cheese st. agur blue cheese.      
+:::
              
 # Searches This Year 
       
-### Active Postings {#sec-all-deadlines} 
-   
+### Deadlines and Quick Links {#sec-all-deadlines}      
+
+💡 **Deadlines are treated very differently between institutions**. Read carefully. For example, we _strongly_ encourage you to email search chairs if you're interested in positions that appear to have passed - they might still be open!
+
+
 :::{#active}
-::: 
- 
-       
-  
+:::  
+
 ### Due Date Past    
   
 Some of these searches *may* still be accepting applications; you might consider contacting the department to check.                        
 
 :::{#due-date-past}
 :::
-    
-
-  
-### Closed Searches     
+                    
+### Closed Searches      
 
 These searches took place this job season and have been confirmed by their department to be closed. 
 
@@ -58,7 +76,7 @@ These searches took place this job season and have been confirmed by their depar
 :::{#closed}
 :::
 
- 
+
 
 # Position Descriptions 
      
@@ -66,6 +84,5 @@ Below are the position descriptions for all of this year's searches which are no
 
 :::{#active-description}
 :::
-
-  
-  
+   
+ 
