--- a/jobs/job-2.qmd
+++ b/jobs/job-2.qmd
@@ -10,3 +10,5 @@ url: https://cs-pui.github.io/
 St. agur blue cheese edam mascarpone. Port-salut stinking bishop when the cheese comes out everybody's happy cut the cheese cheddar paneer cheddar feta. Queso blue castello queso gouda smelly cheese chalk and cheese cottage cheese cheese on toast. Cheese slices pepper jack cheese on toast cheese and biscuits.
 <br> <br>
 Mascarpone blue castello cheeseburger. St. agur blue cheese st. agur blue cheese cheeseburger bavarian bergkase cheesy feet squirty cheese who moved my cheese jarlsberg. Cheese and biscuits danish fontina pepper jack blue castello camembert de normandie emmental airedale airedale. Who moved my cheese st. agur blue cheese. 
+<br><br>
+🗓️ Review of applications begins ***October 1st, 2024*** and will continue until the position is filled. 
