--- a/archive.qmd
+++ b/archive.qmd
@@ -14,5 +14,12 @@ listing:
 
 This page is an archive of job postings from previous years [A new "year" is considered to begin on July 1st.]{.aside} It is provided primarily for historical purposes. Links navigate to the original job postings. These links may be broken, contain outdated information, or otherwise be unreliable. 
 
+::: {.notice .notice-blue}
+
+This archive only goes back as far as our recent migration to a new website publishing system in advance of the 2024-2025 hiring season. If you are interested in older job postings, please check out [the previous version of our website](URL HERE).
+
+:::
+
+
 :::{#archive}
 :::
