--- a/faq.qmd
+++ b/faq.qmd
@@ -36,6 +36,7 @@ On a personal note, contributor [Phil Chodrow](www.philchodrow.prof) found his c
 ![Bar graph showing distribution of ad postings from last year - there is an early cluster at the beginning of August, and with some exceptions, another larger cluster starting in mid-September through the beginning of October... then sporadic additions until December.](assets/img/adsByDate-21.jpg)
 
 Some nuance to the data: 
+
 - Dates are based on when they appeared on this website and may not reflet the official date the ad was released. 
 - While ads typically appear here pretty quickly, there is occasionally some lag, so it's better to look for general trends with this chart. 
 - Some CS departments post 'ad forthcoming' here weeks before their official ad is live. 
@@ -55,14 +56,14 @@ Some nuance to the data:
 
 ------------
 
-#### ❓ Why limit the website to just permanent/tenure-track positions - what about _teaching-track faculty_ or _fixed-term positions_? We need those too! 
+#### ❓ Why focus the website on permanent/tenure-track positions - what about _teaching-track faculty_ or _fixed-term positions_? We need those too! 
 
 
-I agree! Unfortunately, this site is curated on top of normal faculty duties, and without funding or compensation. As a result, we need to limit the scope to keep it manageable. 
+We agree! Unfortunately, this site is curated on top of normal faculty duties, and without funding or compensation. As a result, we need to limit the scope to keep it manageable. We therefore prioritize and actively monitor tenure-track positions at institutions that are primarily undergraduate-focused (PUIs), while encouraging departments that match our scope to make their own submissions for visiting positions. 
 
 Widening the site's scope isn't as simple as increasing the quantity of ads, but expands the months of the year we need to keep close attention on the market, and brings significant new challenges to curation (_e.g. does a visiting prof position at a liberal arts school practically have time for scholarship? How should we articulate the immense diversity of teaching-track positions, which can range from a reality that isn't too distant from adjuncting to institutions that offer tenure?_). All of this is time-intensive.
 
-Until we can find resources for the site (if you have any leads, [let me know](mailto:evan.peck@colorado.edu)!, we have to keep the scope narrow. 
+Until we can find resources for the site (if you have any leads, [let us know](mailto:evan.peck@colorado.edu))!, we have to keep the scope narrow. 
 
 ------------
 
