--- a/index.qmd
+++ b/index.qmd
@@ -27,7 +27,7 @@ This document does _not_ contain most CS faculty positions. It's specifically in
 
 ::: {.notice .notice-blue}
 
-📣 **If you would like to add your position,** [please visit the **Post an Ad** page](/posting) for logistical details or the [**FAQ**](/faq) for more info about this site (it's free!). 
+📣 **If you would like to add your position,** [please visit the **Post an Ad** page](/post-an-ad) for logistical details or the [**FAQ**](/faq) for more info about this site (it's free!). 
 
 :::
   
