--- a/jobs/2025-Bard-College-CS.qmd
+++ b/jobs/2025-Bard-College-CS.qmd
@@ -16,11 +16,5 @@ and networks. The innovative and interdisciplinary Computational
 Sciences program offers a B.A. in computer science, leads a minor in Data Analytics, and collaborated with several programs across the college 
 including Environmental Studies, Experimental Humanities, and Mind, Brain, Behavior. Successful applicants will add to the set of recent hires 
 within the expanding Computational Sciences program. Join our growing program and help shape new curricular offerings and research opportunities!
-<BR><BR>
-
-Completed applications received by ***October 15, 2025*** will receive full consideration, and review of applications will continue until the position is filled.
-<BR>
- 
-
- 
-
+<br><br>
+🗓️ Completed applications received by ***October 15, 2025*** will receive full consideration, and review of applications will continue until the position is filled.
