--- a/jobs/2025-Bard-College-DA.qmd
+++ b/jobs/2025-Bard-College-DA.qmd
@@ -15,10 +15,8 @@ Data Analytics, and collaborated with several programs across the College includ
 Experimental Humanities, and Mind, Brain, Behavior. This role offers the unique opportunity to contribute to innovative curricular approaches for teaching data analytics and introductory statistics courses across Bard College’s programs, spanning sciences, arts, humanities, and social 
 sciences. We encourage applications from candidates with formal education in data analytics methods or who are actively 
 engaged in scholarship involving advanced data analytics techniques.  
-
-
-<BR><BR>
-Completed applications received by ***October 15, 2025*** will receive full consideration, and review of applications will 
+<br><br>
+🗓️ Completed applications received by ***October 15, 2025*** will receive full consideration, and review of applications will 
 continue until the position is filled.
 
  
