--- a/jobs/2025-american-csms-ai.qmd
+++ b/jobs/2025-american-csms-ai.qmd
@@ -8,7 +8,5 @@ url: https://american.wd1.myworkdayjobs.com/AU/job/Main-Campus-Washington-DC/Ass
 ---
 
 The Departments of Computer Science and Mathematics & Statistics at American University invite applications for a full-time, tenure-track assistant professor position, joint between the two departments, with a focus in data science or artificial intelligence beginning August 1, 2026. We encourage candidates in data science, artificial intelligence, computer science, statistics, mathematics, or related fields with a vibrant research and teaching profile to apply. Applicants should have a PhD or an anticipated PhD completion.
-<BR><BR>
-Completed applications received by ***November 1, 2025*** will receive full consideration, and review of applications will continue until the position is filled.
-<BR>
-
+<br><br>
+🗓️ Completed applications received by ***November 1, 2025*** will receive full consideration, and review of applications will continue until the position is filled.
