--- a/post-an-ad.qmd
+++ b/post-an-ad.qmd
@@ -58,6 +58,7 @@ We encourage you to heavily abbreviate the official job description in order to 
 
 We strongly encourage all job descriptions to be **one paragraph**, followed by a single line describing the review process and date. 
 
+
 ## Posting on GitHub
 
 ::: {.notice .notice-blue}
@@ -133,3 +134,33 @@ After your search has officially concluded, **please close your ad**. To do so, 
 
 1. On Github, please navigate to the `*.qmd` file for your job posting. Change the `active` field from `true` to `false`. Please again commit your changes to a new branch. We'll merge in your changes to close the job. 
 2. You can also email Phil Chodrow  (`pchodrow@middlebury.edu`) with a request to close your ad. Make sure to clearly identify which ad is yours, especially if your institution has made multiple postings this job season. 
+
+## Rolling-Review Postings
+
+You can also post an add for a rolling review (i.e. one that has no formal deadline by which time applications must be received). To specify that your posting is for a rolling review, please instead place the ***date on which you are posting the job*** in the `deadline` field and add a separate `review` field with value `rolling`. For example: 
+
+```yaml
+---
+institution: Rolling University
+location: Rolling Hills, USA
+active: true
+type: Tenure Track
+url: https://rolling.edu/jobs/12345
+deadline: 10/24/2025
+review: rolling
+---
+
+St. agur blue cheese edam **mascarpone**. Port-salut stinking bishop when the 
+cheese comes out everybody's happy cut the cheese cheddar paneer cheddar feta. 
+Queso blue castello queso gouda smelly cheese chalk and cheese cottage cheese 
+cheese on toast. Cheese slices pepper jack cheese on toast cheese and biscuits.
+**Mascarpone** blue castello *cheeseburger*. St. agur blue cheese st. agur blue 
+cheese cheeseburger bavarian bergkase cheesy feet squirty cheese who moved my 
+cheese jarlsberg. Cheese and biscuits danish fontina pepper jack blue castello 
+camembert de normandie emmental airedale airedale. Who moved my cheese st. agur 
+blue cheese. 
+...
+<br><br>
+🗓️ Review of applications is ***rolling*** and will continue
+until the position is filled.
+```
