Deactivate job listing for Reed College Systems

--- a/jobs/2025-reed-systems.qmd
+++ b/jobs/2025-reed-systems.qmd
@@ -2,7 +2,7 @@
 institution: Reed College -- Systems 
 location: Portland, Oregon 
 deadline: 2025-10-17
-active: true
+active: false
 type: Tenure Track
 url: https://apply.interfolio.com/172757
 ---
