--- a/jobs/2025-skidmore.qmd
+++ b/jobs/2025-skidmore.qmd
@@ -2,7 +2,7 @@
 institution: Skidmore College
 location: Saratoga Springs, NY. USA
 deadline: 2025-10-01
-active: true
+active: false
 type: Tenure Track
 url: https://eodq.fa.us6.oraclecloud.com/hcmUI/CandidateExperience/en/sites/CX/job/2797/
 ---
